--- a/weapp/static_v2/css/mall_order.css
+++ b/weapp/static_v2/css/mall_order.css
@@ -296,6 +296,24 @@
     -webkit-background-size: 100%;
     background-size: 100%;
 }
+.xui-allOrders .xui-buyerHint i{
+    display: inline-block;
+    width: 18px;
+    height: 17px;
+    margin-bottom: -4px;
+    background: url(/static_v2/img/editor/info.png);
+    -webkit-background-size: 100%;
+    background-size: 100%;
+}
+.xui-buyerHintDropBox {
+    border: 1px solid #d6d4d1;
+    border-radius: 4px;
+    box-shadow: 0 0 5px rgba(214, 212, 209, 0.7);
+    padding: 20px;
+    font-size: 12px;
+    line-height: 24px;
+    width: 300px;
+}
 .xui-allOrders .xui-weizoomCard span{
     background: #fff;
     display: inline-block;
