--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -457,11 +457,11 @@ $(document).ready(function() {
                         $('.xa-display-promotion').html(next_promotions.html()).find('div:first').html('优惠：');
                         next_promotions.remove();
                     }
-                    // 对于不开放的促销，不显示广告语
-                    var span = $('.xa-productName').find('span');
-                    if(span){
-                        span.remove();
-                    }
+                    // // 对于不开放的促销，不显示广告语
+                    // var span = $('.xa-productName').find('span');
+                    // if(span){
+                    //     span.remove();
+                    // }
                 }
             // 商品无促销
             }
