会员搜索修改

--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -727,9 +727,10 @@ $(document).ready(function() {
 	var status = '{{status}}';
 	if(status === '1') {
 		_.delay(function(){
+			console.log(status)
 			//$('.xa-more-filter').trigger('click');
 			$("#status").val("1");
-		}, 500);
+		}, 700);
 
 	}
 });
