--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -373,10 +373,7 @@
 <script type="text/javascript">
 $(document).ready(function() {
 	$('#all').attr('checked', false);
-	$('.xa-arrow').click(function(){
-		console.log('ddddddddddd')
-		alert($('.xa-arrow').attr('src'))
-	})
+	$('#xa-selectAll').attr('checked', false);
 	$('.update_dropdown').delegate('#all', 'click', function(event){
 		var $checkbox = $(event.currentTarget);
         var isChecked = $checkbox.is(':checked');
