--- a/weapp/termite2/templates/termite2/wepage_design_page.html
+++ b/weapp/termite2/templates/termite2/wepage_design_page.html
@@ -1,6 +1,6 @@
 {% load workbench_filter %}
 <!DOCTYPE html>
-<html style="background-color: #F5F5F5;">
+<html style="background-color: #F5F5F5; min-height:100%;">
 	<head>
 		<meta charset="UTF-8" />
 		<title></title>
@@ -12,7 +12,7 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
-	<body style="overflow: hidden;">
+	<body style="overflow: hidden;min-height:100%;">
 		<div class="
 			wa-page 
 			x-design 
@@ -43,6 +43,7 @@
 
 		<script type="text/javascript" src="/termite_static/v3/gmu/widget/swipeImage.js"></script>
 		<script type="text/javascript" src="/termite_static/v3/gmu/widget/weshopBottomNav.js"></script>
+		<script type="text/javascript" src="/termite_static/v3/gmu/widget/weshopSideNav.js"></script>
 
 		<script type="text/javascript" src="/static/backbone/underscore-1.4.4.min.js"></script>
 		<script type="text/javascript" src="/static/backbone/backbone-1.0.0.min.js"></script>
